CardList custom screen: do not take into account user notification filter (#9754)
