# docs/api/openapi.yml
@@ -222,6 +222,12 @@
                     "description": "A unique id to identify client to allow for reconnection (an autogenerated UUID is the best solution)",
                     "schema": { "type": "string" },
                   },
+                  {
+                    "name": "processStatesAlwaysLoaded",
+                    "in": "query",
+                    "description": "Semicolon-separated list of process.state pairs to send even if the user has configured notification to be disabled for these process/states (e.g., process1.state1;process2.state2)",
+                    "schema": { "type": "string" },
+                  },
                 ],
               "responses":
                 {
